# auction-project

./: .env.example  .gitignore  .render.yaml  CLAUDE.md  Makefile  README.md  TODO.md  deploy.sh  run-crawler.sh
.agent/workflows/: update_data.md
.github/workflows/: auto-deploy.yml  check-api.yml  ci.yml
Test/clik-mcp/: .gitignore  PROGRESS.md  README.md  package-lock.json  package.json  test-embed.js  tsconfig.json
auction-crawler/: README.md  README_API_TEST.md  analysis_result.txt  analysis_result_expanded.txt  analysis_result_final.txt  analysis_result_okpo.txt  analysis_result_rag.txt  analysis_result_rag_v2.txt  analysis_result_rag_v3.txt  analysis_result_rag_v4.txt  analysis_result_rag_v5.txt  analysis_top5_okpo.txt  analysis_top5_okpo_v2.txt  config.py  console.py  court_auction_crawler.py  dump.py  excel_to_sqlite.py  insert_test_data.py  pnu_generator.py  pyproject.toml  requirements.txt  sqlite_cleaning.py  test_api_response.py  test_auction_api_response.py  test_pnu_generator.py  test_real_api.py  utils.py
auction-crawler/alembic/: env.py
auction-crawler/alembic/versions/: 324eee63c280_initial_schema.py
auction-crawler/data/council/raw/: 서울특별시의회_20251205_20260104.json
auction-crawler/scripts/: analyze_urban_planning.py  fetch_council_minutes.py
auction-crawler/src/: __init__.py  fetcher.py  models.py  pipeline.py  settings.py  storage.py
auction-crawler/src/auction_crawler.egg-info/: PKG-INFO  requires.txt  top_level.txt
auction-crawler/src/db/: __init__.py
auction-crawler/tests/: test_auction_api_response.py  test_pnu_generator.py  test_real_api.py
auction-project.git/: config  packed-refs
auction-viewer/: .firebaserc  AGENTS.md  Dockerfile  fly.toml  middleware.ts  next.config.ts  package-lock.json  package.json  test_sqlite.js
crawler/: bjdong_code.py  config.py  pnu_generator.py  requirements.txt  sqlite_cleaning.py  utils.py
docs/: application-guide.md  infrastructure-guide.md  operations-guide.md
web/: .dockerignore  .gitignore  Dockerfile  fly.toml  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
web/src/lib/: db.ts  (+2 more)
(+138 files in other folders)
