[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auction-crawler"
version = "2.0.0"
description = "법원경매 데이터 크롤러"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "playwright>=1.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.5.0",
    "pandas-stubs>=2.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501", "N801", "N802", "N803", "N806", "N815", "N816"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["pnu_generator", "scripts.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "real_api: mark test as calling real external API",
]
